# freqtrade-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md
src/freqtrade_mcp/: __init__.py  _version_check.py  cache.py  constants.py  docs.py  exceptions.py  introspection.py  models.py  server.py  validators.py
tests/: conftest.py  test_cache.py  test_docs.py  test_introspection.py  test_server.py  test_validators.py  test_version_check.py
